--- a/src/styles/components/_layout.scss
+++ b/src/styles/components/_layout.scss
@@ -103,6 +103,9 @@
   background: transparent;
   opacity: 0;
   cursor: pointer;
+  @media (max-width: 1023px) {
+    display: none;
+  }
 }
 
 /* ---------------------------------------------------------- */
