--- a/src/styles/components/_BrainNavMenu.scss
+++ b/src/styles/components/_BrainNavMenu.scss
@@ -234,9 +234,9 @@
 
 .brain_menu__mobile_drawer {
   position: fixed;
-  top: 30px;
+  top: 64px;
   bottom: 0;
-  width: 80px;
+  width: 50px;
   z-index: 95;
   transition: transform 0.4s ease;
 
@@ -281,14 +281,15 @@
 
 .brain_menu__mobile_list {
   list-style: none;
-  padding: 40px 0;
+  padding: 4px 0;
   margin: 0;
   display: flex;
   flex-direction: column;
-  gap: 15px;
 }
 
 .brain_menu__mobile_item {
+  border-radius: 6px;
+  background: #ffffff8f;
   width: 100%;
   height: 56px;
   position: relative;
