--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,6 +2,7 @@
 
 @use './tokens';
 @use './components/about';
+@use './components/admin';
 @use './components/auth';
 @use './components/back-button';
 @use './components/blog';
@@ -55,6 +56,9 @@ a {
 button {
   font-family: inherit;
   cursor: pointer;
+  border: none;
+  background-color: none;
+  background: none;
 }
 
 .pageContainer {
