--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,6 +10,7 @@
 @use './components/buttons';
 @use './components/contact';
 @use './components/footer';
+@use './components/forms';
 @use './components/headerAuth';
 @use './components/home';
 @use './components/layout';
