feat: fix style change height hero home Changes to be committed: 	modified:   src/styles/components/_home.scss 	modified:   src/styles/components/_layout.scss

--- a/src/styles/components/_layout.scss
+++ b/src/styles/components/_layout.scss
@@ -16,16 +16,7 @@
 /* Only affects header and main                               */
 /* ---------------------------------------------------------- */
 
-.site-shell--main-bg {
-  .site-header {
-    background-color: var(--colorMainBackground);
-  }
-
-  .site-main {
-    background-color: var(--colorMainBackground);
-  }
-}
-
+.site-shell--main-bg,
 .site-shell--default-bg {
   .site-header {
     background-color: var(--colorBackground);
