--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -526,7 +526,7 @@
 
   &__photo {
     position: absolute;
-    top: 30%;
+    top: 0;
     width: 100%;
     display: flex;
     flex-direction: column;
