--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -166,6 +166,9 @@
   }
 
   &__card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     background-color: var(--colorMainBackground);
     padding: 2rem 1.75rem;
     border-radius: 0.5rem;
