fix admin routing and redirect non admin to localized home login modal
 Changes to be committed:
	modified:   src/app/[lang]/admin/layout.tsx
	new file:   src/app/admin/[[...path]]/page.tsx
	modified:   src/components/home/HomeEntry.tsx
	modified:   src/components/layout/AdminShortcut.tsx
	modified:   src/components/layout/HeaderClientSlots.tsx
	modified:   src/lib/auth/requireAdmin.ts
	modified:   src/styles/components/_contact.scss
	modified:   src/styles/components/_home.scss

--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -5,7 +5,7 @@
 /* ********************************************************** */
 
 .contact_hero {
-  position: relative;
+  /* position: relative; */
   background: var(--colorBackground);
 }
 
