--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -5,7 +5,7 @@
 /* ********************************************************** */
 
 .home-hero {
-  position: relative;
+  /* position: relative; */
   background-color: var(--colorBackground);
 
   &__desktop {
