--- a/src/styles/components/_BrainNavMenu.scss
+++ b/src/styles/components/_BrainNavMenu.scss
@@ -239,6 +239,9 @@
   width: 50px;
   z-index: 95;
   transition: transform 0.4s ease;
+  @media (min-width: 1024px) {
+    display: none;
+  }
 
   &--left {
     left: 0;
