chore: add lucide react for editor icons
feat(editor): add align, tables, and code highlight toolbar actions

style(editor): add base styles for rich editor toolbar and content

 Changes to be committed:
	modified:   .gitignore
	modified:   package-lock.json
	modified:   package.json
	modified:   src/components/editor/RichTextEditor.tsx
	modified:   src/components/editor/RichTextRenderer.tsx
	new file:   src/styles/components/_editor.scss
	modified:   src/styles/globals.scss

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,6 +9,7 @@
 @use './components/BrainNavMenu';
 @use './components/buttons';
 @use './components/contact';
+@use './components/editor';
 @use './components/footer';
 @use './components/forms';
 @use './components/headerAuth';
